--- a/package.json
+++ b/package.json
@@ -20,9 +20,16 @@
   "dependencies": {
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "redux": "^4.1.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.5",
+    "@babel/preset-env": "^7.16.5",
+    "@babel/preset-react": "^7.16.5",
+    "babel-loader": "^8.2.3",
+    "html-webpack-plugin": "^5.5.0",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1"
   }
